--- a/style.css
+++ b/style.css
@@ -13,20 +13,29 @@ ul {
   padding-left: 0rem;
 }
 
-.ham {
-  position: relative;
-  left: 300px;
-  top: 30px;
-  display: none;
-  -webkit-box-shadow: 2px 2px 15px 4px #678b8b71;
-          box-shadow: 2px 2px 15px 4px #678b8b71;
+.ham_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-transform: translate(0px, -80px);
+          transform: translate(0px, -80px);
 }
 
-.ham :hover {
-  -webkit-transform: scale(1.1) translateY(3px);
-          transform: scale(1.1) translateY(3px);
-  -webkit-transition: 1s ease-out;
-  transition: 1s ease-out;
+.ham {
+  padding: 0;
+  width: 80px;
+  opacity: 0.3;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
 }
 
 .section_header {
@@ -59,6 +68,14 @@ ul {
   width: 10%;
   padding-top: 37px;
   margin-right: auto;
+  -webkit-filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+          filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+}
+
+.name:hover {
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  color: #066aeef5;
 }
 
 .prof {
@@ -75,18 +92,30 @@ ul {
 
 .lang_switcher {
   font-family: Gilroy-Bold;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 20px;
-  color: #828282;
+  color: #770b0bb0;
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
-  width: 10%;
   padding-top: 50px;
   margin-left: auto;
   width: auto;
 }
 
+.lang_switcher span {
+  color: #47232359;
+}
+
+.active {
+  font-size: 160%;
+  border-bottom: 2px solid #0eede9;
+  padding-bottom: 4px;
+  color: #011414f5 !important;
+}
+
 .navigation_menu {
+  position: relative;
+  width: 80%;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -96,28 +125,25 @@ ul {
           justify-content: space-between;
   text-decoration: none;
   padding-top: 33px;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #828282;
+  margin-bottom: 1rem;
   background-color: #ffffff;
 }
 
-ul li {
+.navigation_menu button {
   padding: 8px;
-}
-
-.navigation_menu li a {
-  text-decoration: none;
   font-family: Gilroy-Bold;
   font-size: 1rem;
   line-height: 22px;
   color: #828282;
 }
 
-.navigation_menu li a:hover {
-  -webkit-filter: drop-shadow(1px 1px 5px #5e454586) contrast(0.7);
-          filter: drop-shadow(1px 1px 5px #5e454586) contrast(0.7);
+.navigation_menu button:hover {
+  -webkit-filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+          filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
   border-bottom: rgba(104, 203, 227, 0.747) 2px solid;
-  padding-bottom: 18px;
+  padding-bottom: 5px;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
 }
@@ -297,25 +323,24 @@ p {
 }
 
 .hidden {
-  display: none;
+  -webkit-filter: opacity(0);
+          filter: opacity(0);
+  -webkit-transition: 1s;
+  transition: 1s;
+  visibility: hidden;
 }
 
 @media all and (max-width: 720px) {
-  .ham {
-    display: block;
-    padding: 5px;
-    background-color: #b8b2b257;
-    width: 120px;
-    border-radius: 20%;
-    -webkit-transform: translate(10px, -30px);
-            transform: translate(10px, -30px);
+  .navigation_menu {
+    position: relative;
   }
-  .navigation_menu li a {
+  .navigation_menu li button {
     font-size: 1em;
   }
   .navigation_menu {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    width: 80%;
   }
   .header {
     -webkit-box-orient: vertical;
@@ -331,6 +356,9 @@ p {
     margin-right: auto;
     width: 200px;
   }
+  .name {
+    margin-top: 100px;
+  }
   .lang_switcher {
     position: absolute;
     left: 20px;
@@ -344,15 +372,53 @@ p {
   }
 }
 
-@media all and (max-width: 720px) and (min-width: 720px) {
-  .ham {
-    display: block;
-    padding: 5px;
-    background-color: #ffffff57;
-    width: 120px;
-    border-radius: 20%;
-    -webkit-transform: translate(-330px, -50px) scale(0.5);
-            transform: translate(-330px, -50px) scale(0.5);
-  }
+.menu-icon span {
+  display: block;
+  width: 100%;
+  height: 12px;
+  background-color: #5de0e9de;
+  -webkit-transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out;
+}
+
+.menu-icon span::before,
+.menu-icon span::after {
+  display: block;
+  width: 100%;
+  height: 12px;
+  background-color: #26d9e6;
+  content: "";
+  -webkit-transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out;
+}
+
+.menu-icon span::before {
+  -webkit-transform: translate(0, -24px);
+          transform: translate(0, -24px);
+}
+
+.menu-icon span::after {
+  -webkit-transform: translate(0, 12px);
+          transform: translate(0, 12px);
+}
+
+.open span {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.open span::before,
+.open span::after {
+  width: 60%;
+}
+
+.open span::before {
+  -webkit-transform: translate(38px, -14px) rotate(45deg);
+          transform: translate(38px, -14px) rotate(45deg);
+}
+
+.open span::after {
+  -webkit-transform: translate(38px, 2px) rotate(-45deg);
+          transform: translate(38px, 2px) rotate(-45deg);
 }
 /*# sourceMappingURL=style.css.map */
