--- a/style.scss
+++ b/style.scss
@@ -13,17 +13,22 @@ ul {
   padding-left: 0rem;
 }
 
-.ham {
-  position: relative;
-  left: 300px;
-  top: 30px;
-  display: none;
-  box-shadow: 2px 2px 15px 4px #678b8b71;
+.ham_row {
+display: flex;
+align-self: flex-end;
+flex-direction: row;
+justify-content: flex-end;
+transform: translate(0px, -80px);
+}
 
-  :hover {
-    transform: scale(1.1) translateY(3px);
-    transition: 1s ease-out;
-  }
+.ham {
+padding: 0;
+ width: 80px;
+opacity: 0.3;
+transform: scale(0.8);
+
+
+
 }
 
 .section_header {
@@ -50,8 +55,13 @@ ul {
     width: 10%;
     padding-top: 37px;
     margin-right: auto;
+    filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+
   }
-  
+.name:hover {
+            transition-duration: 0.3s;
+            color: #066aeef5;
+        }
   .prof {
     font-family: Gilroy-Medium;
     font-size: 1.1rem;
@@ -66,52 +76,58 @@ ul {
   
   .lang_switcher {
     font-family: Gilroy-Bold;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 20px;
-    color: #828282;
+    color: #770b0bb0;
     transform: rotate(-90deg);
-    width: 10%;
     padding-top: 50px;
     margin-left: auto;
-   
-    width: auto;
-   
+    width: auto;    
+
+        span {
+            color: #47232359;
+            }
+        }
+  
+
+  .active {
+      font-size: 160%;
+      border-bottom: 2px solid #0eede9;
+      padding-bottom: 4px;
+      color: #011414f5 !important;
   }
   
 //Верхнее меню навигации
 .navigation_menu {
+  position: relative;
+  width: 80%;
   list-style: none;
   display: flex;
   justify-content: space-between;
   text-decoration: none;
   padding-top: 33px;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #828282;
-  
+  margin-bottom: 1rem;
   background-color: #ffffff;
 
-  
-}
+        button {
+        padding: 8px;
+        font-family: Gilroy-Bold;
+        font-size: 1rem;
+        line-height: 22px;
+        color: #828282;
+        }
+        
+        button:hover {
+        filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+        border-bottom: hsla(192, 69%, 65%, 0.747) 2px solid;
+        padding-bottom: 5px;
 
-ul li {
-  padding: 8px;
-}
+        transition-duration: 0.3s;
+        }
 
-.navigation_menu li a {
-  text-decoration: none;
-  font-family: Gilroy-Bold;
-  font-size: 1rem;
-  line-height: 22px;
-  color: #828282;
 }
-
-.navigation_menu li a:hover {
-  filter: drop-shadow(1px 1px 5px #5e454586) contrast(0.7);
-  border-bottom: hsla(192, 69%, 65%, 0.747) 2px solid;
-  padding-bottom: 18px;
-  transition-duration: 0.3s;
-}
-
 
 .photo {
   margin-top: 30px;
@@ -255,62 +271,110 @@ p {
 }
 
 .hidden {
-  display: none;
-}
+  filter: opacity(0);
+  transition: 1s;
+  visibility: hidden;
+  }
 
 @media all and (max-width: 720px) {
-  .ham {
-    display: block;
-    padding: 5px;
-    background-color: #b8b2b257;
-    width: 120px;
-    border-radius: 20%;
-    transform: translate(10px, -30px);
-  }
+      .ham {
+             
+        
+      }
 
-  .navigation_menu li a {
-      font-size: 1em;
-  }
+      .navigation_menu {
+        position: relative;
+        
+        
+      }
 
-  .navigation_menu {
-      flex-wrap: wrap;
-  }
+      .navigation_menu li button {
+          font-size: 1em;
+      }
 
-  .header {
-      flex-direction: column;
-      place-content: space-between center;
-  }
+      .navigation_menu {
+          flex-wrap: wrap;
+          width: 80%;
+      }
 
-  
-    .name, 
-    .prof,
-    .lang_switcher {
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-  }
+      .header {
+          flex-direction: column;
+          place-content: space-between center;
+      }
 
-  .lang_switcher {
-      position: absolute;
-      left: 20px;
-      top: 160px;
-    
-      margin-right: 10px;
-      align-self: flex-end;
-   
-      width: auto;
-      padding-top: 0px;
-      margin-top: 15px;
-         
-  }
+      
+        .name, 
+        .prof,
+        .lang_switcher {
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+      }
+
+      .name {
+        margin-top: 100px;
+      }
+
+      .lang_switcher {
+          position: absolute;
+          left: 20px;
+          top: 160px;
+        
+          margin-right: 10px;
+          align-self: flex-end;
+      
+          width: auto;
+          padding-top: 0px;
+          margin-top: 15px;
+            
+      }
 
 @media all and (min-width: 720px) {
-  .ham {
-    display: block;
-    padding: 5px;
-    background-color: #ffffff57;
-    width: 120px;
-    border-radius: 20%;
-    transform: translate(-330px, -50px) scale(0.5);
-  }
-}}
+
+}
+}
+
+
+
+.menu-icon span {
+  display: block;
+  width: 100%;
+  height: 12px;
+  background-color: #5de0e9de;
+  transition: 0.7s ease-in-out;
+}
+
+.menu-icon span::before,
+.menu-icon span::after {
+  display: block;
+  width: 100%;
+  height: 12px;
+  background-color: #26d9e6;
+  content: "";
+    transition: 0.7s ease-in-out;
+}
+
+.menu-icon span::before {
+  transform: translate(0, -24px);
+}
+
+.menu-icon span::after {
+  transform: translate(0, 12px);
+}
+
+.open span {
+  transform: rotate(180deg);
+}
+
+.open span::before,
+.open span::after {
+  width: 60%;
+}
+
+.open span::before {
+  transform: translate(38px, -14px) rotate(45deg);
+}
+
+.open span::after {
+  transform: translate(38px, 2px) rotate(-45deg);
+}
