--- a/style.scss
+++ b/style.scss
@@ -56,6 +56,8 @@ transform: scale(0.8);
     padding-top: 37px;
     margin-right: auto;
     filter: drop-shadow(2px 2px 5px #5e454586) contrast(0.7);
+    transition: 1s;
+
 
   }
 .name:hover {
@@ -110,6 +112,7 @@ transform: scale(0.8);
   border-bottom: 1px solid #828282;
   margin-bottom: 1rem;
   background-color: #ffffff;
+  transition: 1s;
 
         button {
         padding: 8px;
@@ -131,9 +134,11 @@ transform: scale(0.8);
 
 .photo {
   margin-top: 30px;
+ 
 
   img {
     border: slategrey solid 2px;
+    transition: 1s;
   }
 
   img:hover {
@@ -150,9 +155,8 @@ transform: scale(0.8);
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-  /* Black */
   color: #070707;
-  padding-top: 100px;
+  padding-top: 70px;
   padding-bottom: 107px;
   height: auto;
 }
@@ -194,6 +198,7 @@ p {
   width: 80px;
   padding: 5px;
   border-radius: 5%;
+  
 }
 
 .img_container:hover {
@@ -208,6 +213,8 @@ p {
   margin-left: auto;
   justify-content: space-around;
   padding-top: 0.4em;
+  transition: 1s;
+
 }
 
 .soft_names div:hover {
@@ -233,6 +240,8 @@ p {
   padding-top: 0.4em;
   padding-bottom: 15px;
   margin-bottom: 30px;
+  transition: 1s;
+
 }
 
 .skill_container {
@@ -254,6 +263,7 @@ p {
   padding-bottom: 20px;
   border: #18e7e4f5 solid 2px;
   border-bottom: none;
+  
   img {
     padding-bottom: 20px;
   }
@@ -281,20 +291,93 @@ p {
   filter: opacity(0);
   transition-duration: 1s;
   display: none !important;
-  
 }
 
+.contacts_list {
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+margin-top: 30px;
+margin-bottom: 30px;
+padding: 5px;
+border-bottom: 1px solid hsla(192, 69%, 65%, 0.747);
+
+}
+
+a {
+text-decoration: none;
+color: #2c5bac;
+}
+
+a:active {
+  color: hsla(192, 69%, 65%, 0.747);
+}
+
+.contact {
+  position: relative;
+  top: 20px ;
+  padding: 10px;
+  padding-bottom: 30px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: #023da3;
+  
+  }
+
+.contact-icon {
+      width: 60px;
+      height: 60px;
+      background: url("/img/social-media-icons-css-sprite.png") no-repeat;
+      transition: 0.7s;
+    
+    }
+
+.contact-vk .contact-icon {
+background-position: -339px -60px;
+margin-left: auto;
+margin-right: auto; 
+}
+
+.contact-icon:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(2px 2px 5px #5e454586);
+  }
+
+.contact-email .contact-icon {
+  background-position: -226px -60px;
+  margin-left: auto;
+  margin-right: auto;
+  
+  }
+
+.contact-phone .contact-icon {
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url(/img/phone-icon-vector-blue.png);
+    background-size: contain;
+    text-align: center;
+    }
+
+.rights {
+  text-align: end;
+  padding: 15px;
+  color: hsla(192, 46%, 49%, 0.747);
+}
+
+  
+
+
 @media all and (max-width: 720px) {
-      .ham {
-             
-        
-      }
+  .contacts_list {
+  
+    flex-direction: column;
+    align-items: center;
+  }
 
       .navigation_menu {
         position: relative;
-        
-        
-      }
+       }
 
       .navigation_menu li button {
           font-size: 1em;
@@ -310,7 +393,6 @@ p {
           place-content: space-between center;
       }
 
-      
         .name, 
         .prof,
         .lang_switcher {
@@ -320,30 +402,26 @@ p {
       }
 
       .name {
-        margin-top: 100px;
+        margin-top: 60px;
       }
 
       .lang_switcher {
           position: absolute;
-          left: 20px;
-          top: 160px;
-        
+          left: 10px;
+          top: 250px;
           margin-right: 10px;
-          align-self: flex-end;
-      
           width: auto;
           padding-top: 0px;
-          margin-top: 15px;
-            
+          transition: 1s;
+
       }
 
 @media all and (min-width: 720px) {
-
 }
 }
 
 
-
+//бутерброд
 .menu-icon span {
   display: block;
   width: 100%;
